Fixed RG bug; added new OP; settable seed
There was a major mistake in the RG implementation that effected the
way the number of available configs was calculated for both the old and
new configs. A new order parameter that measures whether two domains
are on adjacent lattice sites was added. Random seeds can now be set in
the input file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.swp
+*.tags
 .prereqs.txt
 LICENSE.old
 .ycm_extra_conf.py*
@@ -7,7 +8,7 @@ LICENSE.old
 .d/
 bin/
 build/
-lattice_dna_origami/__pycache__/
+*__pycache__/
 localtests/
 prereqs.txt
 tests/bin/
