--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,17 @@
+*.clang
 *.swp
-*.tags
-.prereqs.txt
-LICENSE.old
-.ycm_extra_conf.py*
+*.ycm_extra_conf.py*
+*notes.txt
+*tags
 .color_coded
+.prereqs.txt
+.ycm_extra_conf.py*
+LICENSE.old
+prereqs.txt
+scripts/ideal_random_walks/num_walks.arch
+*__pycache__/
 .cache/
 .d/
 bin/
 build/
-*__pycache__/
 localtests/
-prereqs.txt
-tests/bin/
-tests/build/
-tests/src/.ycm_extra_conf.py*
-scripts/analysis/outs/
-scripts/analysis/notes.txt
-scripts/ideal_random_walks/num_walks.arch
