Fixed some code that produces warnings.

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ scripts/ideal_random_walks/num_walks.arch
 .d/
 bin/
 build/
+CMakeFiles/
 dist/
 localtests/
-tests/data/
 origamipy.egg-info/
+tests/data/
