--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,15 +91,15 @@ install(TARGETS latticeDNAOrigami
 )
 
 # jsoncp
-#include(FetchContent)
-#FetchContent_Declare(jsoncpp
-#    GIT_REPOSITORY https://github.com/open-source-parsers/jsoncpp
-#)
-#FetchContent_GetProperties(jsoncpp)
-#if(NOT jsoncpp_POPULATED)
-#    FetchContent_Populate(jsoncpp)
-#    add_subdirectory(${jsoncpp_SOURCE_DIR} ${jsoncpp_BINARY_DIR})
-#endif()
+include(FetchContent)
+FetchContent_Declare(jsoncpp
+    GIT_REPOSITORY https://github.com/open-source-parsers/jsoncpp
+)
+FetchContent_GetProperties(jsoncpp)
+if(NOT jsoncpp_POPULATED)
+    FetchContent_Populate(jsoncpp)
+    add_subdirectory(${jsoncpp_SOURCE_DIR} ${jsoncpp_BINARY_DIR})
+endif()
 
 # Compiler warnings
 if(MSVC)
