New back-calculated observables and cruft cleanup.
I added scripts to calculate the RMSD, instantanious radius of gyration,
and end-to-end distance. I removed a bunch of old calculation scripts
that I no longer use or that no longer work. There are some other
changes that I have not documented here so check the diffs.

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,10 @@ scripts/ideal_random_walks/num_walks.arch
 *__pycache__/
 .cache/
 .d/
+archive/
 bin/
 build/
+buildc/
 dist/
 localtests/
 tests/data/
